<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menuBase"
    >
    <item
        android:id="@+id/home"
        android:title="@string/home"
        android:icon="@drawable/home"
        app:showAsAction="always"

        />
    <item
        android:id="@+id/newrecipe"
        android:title="@string/newrecipe"
        android:icon="@drawable/add"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/ownrecipe"
        android:title="@string/ownrecipe"

        app:showAsAction="ifRoom"

        />
    <item
        android:id="@+id/logout"
        android:title="@string/logout"

        app:showAsAction="never"

        />

</menu>