<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:gravity="center">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        style="@style/Platform.MaterialComponents.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_centerVertical="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailET"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"

        style="@style/Platform.MaterialComponents.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passw"
        android:layout_below="@id/email"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordET"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_below="@id/password">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:onClick="login"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_instead"
            android:onClick="moveToRegister"/>
    </LinearLayout>
</RelativeLayout>