<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="@dimen/newrecmerg"
    android:background="@drawable/round_edge_bg"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingredient_name">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ingredientName"
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:textAlignment="viewStart"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/unit">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/unit"
            android:layout_width="match_parent"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
<com.google.android.material.floatingactionbutton.FloatingActionButton
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/delete"
    android:backgroundTint="@color/red"
    app:borderWidth="0dp"
    android:layout_gravity="center"
    android:id="@+id/removeitem"
    />
</LinearLayout>
